syntax = "proto3";

option java_package = "br.com.compifab";
option java_multiple_files = true;

package br.com.compifab;

service ProductService {
  rpc Create(ProductRequest) returns (ProductResponse);
  rpc FindById(RequestById) returns (ProductResponse);
  rpc Delete(RequestById) returns (EmptyResponse);
  rpc FindAll(EmptyRequest) returns (ProductResponseList);
}

message ProductResponseList {
  repeated ProductResponse products = 1;
}

message EmptyRequest {}

message EmptyResponse {}

message RequestById {
  int64 id = 1;
}

message ProductRequest {
  string name = 1;
  double price = 2;
  int32 quantityInStock = 3;
}

message ProductResponse {
  int64 id = 1;
  string name = 2;
  double price = 3;
  int32 quantityInStock = 4;
}